<resources>
    <string name="app_name">Plugin_property</string>

    <string name="error_to_connect_server">网络连接失败!</string>
    <string name="error_no_data">暂无任何内容</string>
    <string name="property_submit">提交</string>
    <string name="property_submit_success">提交成功</string>
    <string name="property_send">发送</string>
    <string name="property_send_success">发送成功</string>
    <string name="property_send_notnull">回复内容不能为空</string>
    <string name="property_me">我</string>

    <string name="property">物业</string>
    <string name="property_announcement">物业公告</string>
    <string name="property_repair">报修</string>
    <string name="property_complaint">投诉建议</string>
    <string name="property_call">呼叫物业中心</string>
    <string name="property_new_repair">新建报修</string>
    <string name="property_new_complaint">发起投诉</string>
    <string name="property_new_pay">缴费</string>

    <string name="property_type_submit">已提交</string>
    <string name="property_type_finish">已完成</string>
    <string name="property_type_response">已回复</string>
    <string name="property_type_close">已关闭</string>

    <string name="property_complaint_theme">主题</string>
    <string name="property_complaint_content">内容</string>
    <string name="property_complaint_mobile">电话</string>

    <string name="property_complaint_theme_praise">表扬</string>
    <string name="property_complaint_theme_complaints">投诉</string>
    <string name="property_complaint_theme_suggest">建议</string>

    <string name="property_repair_type">报修类型</string>
    <string name="property_repair_device">报修设备</string>
    <string name="property_repair_remark">备注</string>

    <string name="property_repair_device_lock">锁类</string>
    <string name="property_repair_device_water">水电类</string>
    <string name="property_repair_device_windows">门窗类</string>
    <string name="property_repair_device_wall">墙类</string>
    <string name="property_repair_device_lift">电梯类</string>

    <string name="property_repair_device_common">公共报修</string>
    <string name="property_repair_device_personal">个人报修</string>

    <string name="property_pay_no">未缴费</string>
    <string name="property_pay_yes">已缴费</string>
    <string name="property_pay_name">费用名称: </string>
    <string name="property_pay_type">费用类型: </string>
    <string name="property_pay_object">收费对象: </string>
    <string name="property_pay_deadline">截止日期: </string>
    <string name="property_pay_normal">金额: </string>
    <string name="property_pay_date">缴费日期: </string>
    <string name="property_pay_deadline_list">截止: </string>
    <string name="property_pay_putoff">滞纳金: </string>
    <string name="property_pay_style">支付方式</string>
    <string name="property_pay_wechat">微信支付</string>
    <string name="property_pay_alipay">支付宝</string>
    <string name="property_pay_yilian">银联支付</string>
    <string name="property_pay_yizhifu">翼支付</string>
    <string name="property_pay_total">合计: </string>
    <string name="property_pay_submit">支付费用</string>
    <string name="property_pay_totalall">总计: </string>
    <string name="property_pay_success">支付完成</string>
    <string name="property_pay_total_yes">已缴合计: %1$s元</string>
    <string name="property_pay_total_no">未缴合计: %1$s元</string>
    <string name="property_pay_qrcode">请使用微信扫描二维码
            \n完成支付</string>

    <string name="pay_property">物业费</string>
    <string name="pay_water">水费</string>
    <string name="pay_electric">电费</string>
    <string name="pay_gas">燃气费</string>
    <string name="pay_else">其他费用</string>
    <string name="pay_over_day">已经超过%1$s天</string>
    <string name="pay_remain_day">剩余%1$s天</string>
    <string name="pay_over_day_price">超过%1$s天产生%2$s元滞纳金</string>
    <string name="pay_normal">正常缴费</string>
</resources>
