<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_pay_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    tools:context="com.techjumper.polyhome.b.property.mvp.v.fragment.PayFragment">

    <RelativeLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_30"
        android:paddingTop="@dimen/dp_30">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:text="@string/property_pay_name"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_326"
            android:text="@string/property_pay_type"
            android:textStyle="bold"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/detail_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_612"
            android:text="@string/property_pay_object"
            android:textStyle="bold"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <View
        android:id="@+id/line_one"
        android:layout_width="@dimen/dp_795"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/layout_one"
        android:background="@color/color_1Affffff" />

    <RelativeLayout
        android:id="@+id/layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_one"
        android:paddingBottom="@dimen/dp_30"
        android:paddingTop="@dimen/dp_30">

        <TextView
            android:id="@+id/detail_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/property_pay_deadline"
            android:textStyle="bold"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/detail_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_326"
            android:text="@string/property_pay_normal"
            android:textStyle="bold"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/detail_putoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_612"
            android:text="@string/property_pay_putoff"
            android:textStyle="bold"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <View
        android:id="@+id/line_two"
        android:layout_width="@dimen/dp_795"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/layout_two"
        android:background="@color/color_1Affffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_two"
        android:layout_marginTop="@dimen/dp_27"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_pay_style"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.techjumper.polyhome.b.property.widget.PayCheckView
                android:id="@+id/detail_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isCheck="true"
                app:pay_icon="@mipmap/icon_wechat"
                app:pay_text="@string/property_pay_wechat" />

            <com.techjumper.polyhome.b.property.widget.PayCheckView
                android:id="@+id/detail_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                app:pay_icon="@mipmap/icon_alipay"
                app:pay_text="@string/property_pay_alipay" />

            <com.techjumper.polyhome.b.property.widget.PayCheckView
                android:id="@+id/detail_union"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:visibility="gone"
                app:pay_icon="@mipmap/icon_union"
                app:pay_text="@string/property_pay_yilian" />

            <com.techjumper.polyhome.b.property.widget.PayCheckView
                android:id="@+id/detail_yee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:visibility="gone"
                app:pay_icon="@mipmap/icon_yee"
                app:pay_text="@string/property_pay_yizhifu" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_32"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_472"
            android:text="@string/property_pay_total"
            android:textColor="@color/color_ffffff"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/detail_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_511"
            tools:text="￥9999"
            android:textColor="@color/color_ff6700"
            android:layout_centerVertical="true"
            android:textSize="@dimen/sp_30" />

        <TextView
            android:id="@+id/detail_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_submit"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_18"
            android:text="@string/property_pay_submit"
            android:layout_marginLeft="@dimen/dp_654"/>
    </RelativeLayout>

    <View
        android:layout_width="@dimen/dp_795"
        android:layout_height="@dimen/dp_1"
        android:layout_above="@id/layout_bottom"
        android:layout_marginBottom="@dimen/dp_22"
        android:background="@color/color_1Affffff" />
</RelativeLayout>