<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main"
    android:orientation="vertical"
    tools:context=".mvp.v.activity.MainActivity">

    <include layout="@layout/layout_bottom" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="@dimen/dp_173"
                android:layout_height="match_parent"
                android:background="@mipmap/bg_lefttab"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/title_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/title_announcement"
                        style="@style/InfoTitleStyle"
                        android:layout_width="164.5dp"
                        android:layout_height="62dp"
                        android:checked="true"
                        android:text="@string/property_announcement" />

                    <RadioButton
                        android:id="@+id/title_system"
                        style="@style/InfoTitleStyle"
                        android:layout_width="164.5dp"
                        android:layout_height="62dp"
                        android:layout_centerVertical="true"
                        android:text="@string/property_repair" />

                    <RadioButton
                        android:id="@+id/title_order"
                        style="@style/InfoTitleStyle"
                        android:layout_width="164.5dp"
                        android:layout_height="62dp"
                        android:text="@string/property_complaint" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/system_unread_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_128"
            android:layout_marginTop="83dp"
            android:background="@drawable/bg_circle_ff4d38"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

        <TextView
            android:id="@+id/order_unread_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_128"
            android:layout_marginTop="145dp"
            android:background="@drawable/bg_circle_ff4d38"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/sp_12"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_34"
        android:paddingLeft="@dimen/dp_40"
        android:paddingRight="@dimen/dp_40"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property"
            android:textColor="@color/color_DDffffff"
            android:textSize="@dimen/sp_30" />

        <TextView
            android:id="@+id/title_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="bottom"
            android:textColor="@color/color_7fffffff"
            android:textSize="@dimen/sp_18"
            tools:text="3月18日  周五  22:45" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</LinearLayout>
